--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ email: your-email@domain.com
 description: >
   Documentation and tutorials for modding Virhex games
 
-baseurl: "/wiki" # the subpath of your site, e.g. /blog/
-url: https://virhex.com/wiki # the base hostname & protocol for your site
-git_address: https://github.com/Virhex/wiki
-git_edit_address: https://github.com/Virhex/wiki/blob/master
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: https://virhex.com # the base hostname & protocol for your site
+git_address: https://github.com/Virhex
+git_edit_address: https://github.com/Virhex/virhex.github.io/blob/master
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
