--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: your-email@domain.com
 description: >
   Virhex games and documentation
 
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: https://virhex.com # the base hostname & protocol for your site
 git_address: https://github.com/Virhex
 git_edit_address: https://github.com/Virhex/virhex.github.io/blob/master
