weapons documentation and general progress.

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -11,6 +11,7 @@
   - hellbreaker/pickups
   - hellbreaker/weapons
   - hellbreaker/monsters
+  - hellbreaker/projectiles
   
 - title: Level Editor
   docs:
