mod organization documentation

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -12,6 +12,7 @@
   - hellbreaker/weapons
   - hellbreaker/attacks
   - hellbreaker/monsters
+  - hellbreaker/mods
   
 - title: Level Editor
   docs:
